--- a/nutrition-service/pom.xml
+++ b/nutrition-service/pom.xml
@@ -44,6 +44,18 @@
 		</dependency>
 
 		<dependency>
+			<groupId>ba.unsa.etf.nwt.common</groupId>
+			<artifactId>error-logging</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>
+
+		<dependency>
+			<groupId>ba.unsa.etf.nwt.common</groupId>
+			<artifactId>spring-mvc-configuration</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>
+
+		<dependency>
 			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
 			<scope>runtime</scope>
