--- a/auth/pom.xml
+++ b/auth/pom.xml
@@ -65,6 +65,12 @@
 		</dependency>
 
 		<dependency>
+			<groupId>ba.unsa.etf.nwt.common</groupId>
+			<artifactId>jpa</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>
+
+		<dependency>
 			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
 			<scope>runtime</scope>
