--- a/notification-service/pom.xml
+++ b/notification-service/pom.xml
@@ -56,6 +56,11 @@
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
 
+		<dependency>
+			<groupId>ba.unsa.etf.nwt.common</groupId>
+			<artifactId>jpa</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.postgresql</groupId>
