--- a/common/error-logging/pom.xml
+++ b/common/error-logging/pom.xml
@@ -10,4 +10,25 @@
     </parent>
 
     <artifactId>error-logging</artifactId>
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-web</artifactId>
+            <version>6.2.3</version>
+            <scope>compile</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>2.0.16</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-autoconfigure</artifactId>
+            <version>3.4.4</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
 </project>
