--- a/auth/src/main/resources/application.yml
+++ b/auth/src/main/resources/application.yml
@@ -1,23 +1,7 @@
-server:
-  port: 9000
-
 spring:
   application:
     name: auth
-  jpa:
-    database: postgresql
-    show-sql: false
-    hibernate:
-      ddl-auto: update
-  datasource:
-    url: jdbc:postgresql://localhost:5432/nwt_auth
-    username: postgres
-    password:
-    driver-class-name: org.postgresql.Driver
-
-jwt:
-  header-title: Authorization
-  token-prefix: "Bearer "
-  secret-key: ${JWT_SECRET_KEY}
-  authorities-key: USER_AUTHORITIES
-  token-validity-time: PT30M
+  profiles:
+    active: dev
+  config:
+    import: configserver:http://localhost:8888
