--- a/nutrition-service/src/main/resources/application.yml
+++ b/nutrition-service/src/main/resources/application.yml
@@ -1,16 +1,7 @@
-server:
-  port: 9020
-
 spring:
   application:
     name: nutrition-service
-  jpa:
-    database: postgresql
-    show-sql: false
-    hibernate:
-      ddl-auto: update
-  datasource:
-    url: jdbc:postgresql://localhost:5432/nwt_nutrition
-    username: postgres
-    password:
-    driver-class-name: org.postgresql.Driver
+  profiles:
+    active: dev
+  config:
+    import: configserver:http://localhost:8888
