--- a/nutrition-service/pom.xml
+++ b/nutrition-service/pom.xml
@@ -102,6 +102,10 @@
 			<version>5.16.1</version>
 			<scope>test</scope>
 		</dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-openfeign-core</artifactId>
+        </dependency>
     </dependencies>
 
 	<dependencyManagement>
