--- a/auth/pom.xml
+++ b/auth/pom.xml
@@ -51,6 +51,12 @@
 		</dependency>
 
 		<dependency>
+			<groupId>net.devh</groupId>
+			<artifactId>grpc-server-spring-boot-starter</artifactId>
+			<version>3.1.0.RELEASE</version>
+		</dependency>
+
+		<dependency>
 			<groupId>ba.unsa.etf.nwt.common</groupId>
 			<artifactId>http-logging</artifactId>
 			<version>1.0-SNAPSHOT</version>
@@ -71,6 +77,12 @@
 		<dependency>
 			<groupId>ba.unsa.etf.nwt.common</groupId>
 			<artifactId>jpa</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>
+
+		<dependency>
+			<groupId>ba.unsa.etf.nwt</groupId>
+			<artifactId>events</artifactId>
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
 
