--- a/auth/src/main/resources/application.yml
+++ b/auth/src/main/resources/application.yml
@@ -5,3 +5,6 @@ spring:
     active: dev
   config:
     import: configserver:http://localhost:8888
+grpc:
+  server:
+    port: 7001 # unused, so might as well define it here
