--- a/nutrition-service/pom.xml
+++ b/nutrition-service/pom.xml
@@ -42,6 +42,18 @@
 		</dependency>
 
 		<dependency>
+			<groupId>net.devh</groupId>
+			<artifactId>grpc-server-spring-boot-starter</artifactId>
+			<version>3.1.0.RELEASE</version>
+		</dependency>
+
+		<dependency>
+			<groupId>ba.unsa.etf.nwt</groupId>
+			<artifactId>events</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>
+
+		<dependency>
 			<groupId>ba.unsa.etf.nwt.common</groupId>
 			<artifactId>http-logging</artifactId>
 			<version>1.0-SNAPSHOT</version>
