Notifications Service Implementation (#3)
* Notification Work in Progress

* Notifications WIP

* Code cleanup. Feign clients left when other services are merged

* Implement feign clients

* Fix target folder included

--- a/notification-service/src/main/resources/application.yml
+++ b/notification-service/src/main/resources/application.yml
@@ -5,3 +5,25 @@ spring:
     active: dev
   config:
     import: configserver:http://localhost:8888
+
+notifier:
+  mode: mock
+  cron:
+    daily: '0 0 20 * * *' # every day at 20:00
+    weekly: '0 0 15 * * 0' # every sunday at 15:00
+    monthly: '0 0 12 27 * *' # every 27th of the month
+  email:
+    sender:
+      address: ${EMAIL_ADDRESS}
+    auth:
+      username: ${EMAIL_ADDRESS}
+      password: ${EMAIL_PASSWORD}
+    java-mail:
+      'mail.smtp.host': smtp.gmail.com
+      'mail.smtp.port': 465
+      'mail.smtp.auth': true
+      'mail.smtp.socketFactory.port': 465
+      'mail.smtp.socketFactory.class': javax.net.ssl.SSLSocketFactory
+    templates:
+      workout-goal-missed: classpath:template/email/workout-goal-missed.html
+      nutrition-goal-missed: classpath:template/email/nutrition-goal-missed.html
