--- a/notification-service/pom.xml
+++ b/notification-service/pom.xml
@@ -67,6 +67,13 @@
 		</dependency>
 
 		<dependency>
+			<groupId>ba.unsa.etf.nwt.common</groupId>
+			<artifactId>notifier</artifactId>
+			<version>1.0-SNAPSHOT</version>
+			<scope>compile</scope>
+		</dependency>
+
+		<dependency>
 			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
 			<scope>runtime</scope>
