--- a/nutrition-service/src/main/resources/application.yml
+++ b/nutrition-service/src/main/resources/application.yml
@@ -2,9 +2,16 @@ spring:
   application:
     name: nutrition-service
   profiles:
-    active: dev
+    active: compose
   config:
-    import: configserver:http://localhost:8888
+    import: configserver:http://config-server:8888
+    # configserver:http://localhost:8888 <- in case of running manually
+  rabbitmq:
+    host: rabbitmq
+    port: 5672
+    username: user
+    password: pass
+
 grpc:
   server:
     port: 7006
