--- a/workout-service/src/main/resources/application.yml
+++ b/workout-service/src/main/resources/application.yml
@@ -2,6 +2,13 @@ spring:
   application:
     name: workout-service
   profiles:
-    active: dev
+    active: compose
   config:
-    import: configserver:http://localhost:8888
+    import: configserver:http://config-server:8888
+  rabbitmq:
+    host: rabbitmq
+    port: 5672
+    username: user
+    password: pass
+
+    # configserver:http://localhost:8888 <- in case of running manually
