--- a/notification-service/src/main/resources/application.yml
+++ b/notification-service/src/main/resources/application.yml
@@ -2,9 +2,15 @@ spring:
   application:
     name: notification-service
   profiles:
-    active: dev
+    active: compose
   config:
-    import: configserver:http://localhost:8888
+    import: configserver:http://config-server:8888
+    # configserver:http://localhost:8888 <- in case of running with docker compose
+  rabbitmq:
+    host: rabbitmq
+    port: 5672
+    username: user
+    password: pass
 
 notifier:
   mode: mock
